# AlgorithmsV2

./: CMakeLists.txt  algorithmvisializationwindow.cpp  algorithmvisializationwindow.h  algorithmvisializationwindow.ui  icons.qrc  main.cpp  rootappwidget.cpp  rootappwidget.h  rootappwidget.ui
Core/: algorithm.cpp  algorithm.h  algorithmbenchmarkwindow.cpp  algorithmbenchmarkwindow.h  algorithmbenchmarkwindow.ui  algorithmwidgetlibrary.cpp  algorithmwidgetlibrary.h  datastructurewidget.cpp  datastructurewidget.h  propertylayoutfactory.cpp  propertylayoutfactory.h
Graphs/: addgraphedgedialog.cpp  addgraphedgedialog.h  addgraphedgedialog.ui  edgelist.cpp  edgelist.h  graph.cpp  graph.h  graphalgorithms.cpp  graphalgorithms.h  graphbenchmark.cpp  graphbenchmark.h  graphwidget.cpp  graphwidget.h  graphwidget.ui
